--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.10"
   },
   "devDependencies": {
