--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "react-tabs": "^6.1.0",
