--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.10",
+    "@tanstack/react-query": "^5.69.0",
+    "axios": "^1.8.4",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.2.0",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.10"
   },
